--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Übung Animation 2_2</title>
+    <title>Übung Animation 3_2</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -14,15 +14,12 @@
     <div class="ball ball2"></div>
     <div class="ball ball3"></div>
     <div class="ball ball4"></div>
+    <div class="ball ball5"></div>
 </section>
 
 <body>
 
 
-
-    <script src="https://kit.fontawesome.com/414a930ca8.js" crossorigin="anonymous"></script>
-
-    <script src="assets/js/main.js"></script>
 
 
 </body>
